--- a/template/Fallstudie/Einleitung/Einleitung.tex
+++ b/template/Fallstudie/Einleitung/Einleitung.tex
@@ -1,96 +1,371 @@
 \chapter{Einleitung}
-Anhand der technologischen Entwicklung, erster Testfelder, sowie Prototypen Industrie stellt  die Frage,
-welche Umwelteffekte beim autonomen Fahren auftreten werden.
-Dies hängt mitunter mit neuen Antriebsformen (z. B. Elektroantrieb) und Betriebsmodellen (z. B. geteilte
-Fahrzeuge) zusammen.
+% Anhand der technologischen Entwicklung, erster Testfelder, sowie Prototypen Industrie stellt  die Frage,
+% welche Umwelteffekte beim autonomen Fahren auftreten werden.
+% Dies hängt mitunter mit neuen Antriebsformen (z. B. Elektroantrieb) und Betriebsmodellen (z. B. geteilte
+% Fahrzeuge) zusammen.
 
-Je nach der Entwicklung in den einzelnen Bereichen werden auch sich unterschiedliche Kraftfahrzeuge bei einer Einführung des autonomen Fahrens
-durchsetzten.
-Als Umwelteffekte des Autonomen Fahrens bezeichnet man die Einflüsse die sich durch autonomen Fahren ändern, hierbei kann es zur Verringern oder Anstieg von Schadstoffausstößen kommen, oder eine
-Veränderung in der Infrastruktur, da Parkplätze oder Seitenstreifen nicht mehr in gleicher Zahl benötigt werden oder der Ausbau von Straßen da das Verkehrsaufkommen zugenommen hat.
-Der Umstieg auf autonomes Fahren erfolgt nicht in einem Schritt,
-sondern schrittweise oder je nach Fahrzeugs
-nur für einzelne Anwendungsfälle (siehe Anlage I, Stufen der Automatisierung, autonomes
-Fahren bei Level 5). Im Öffentlichen Verkehr (ÖV) könnten sich Veränderungseffekte schneller einstellen.
+% Je nach der Entwicklung in den einzelnen Bereichen werden auch sich unterschiedliche Kraftfahrzeuge bei einer Einführung des autonomen Fahrens
+% durchsetzten.
+% Als Umwelteffekte des Autonomen Fahrens bezeichnet man die Einflüsse die sich durch autonomen Fahren ändern, hierbei kann es zur Verringern oder Anstieg von Schadstoffausstößen kommen, oder eine
+% Veränderung in der Infrastruktur, da Parkplätze oder Seitenstreifen nicht mehr in gleicher Zahl benötigt werden oder der Ausbau von Straßen da das Verkehrsaufkommen zugenommen hat.
+% Der Umstieg auf autonomes Fahren erfolgt nicht in einem Schritt,
+% sondern schrittweise oder je nach Fahrzeugs
+% nur für einzelne Anwendungsfälle (siehe Anlage I, Stufen der Automatisierung, autonomes
+% Fahren bei Level 5). Im Öffentlichen Verkehr (ÖV) könnten sich Veränderungseffekte schneller einstellen.
 
-Denn durch den Verkehr verursachten Schadstoffe sind eine wesentliche Ursache für den schnell voranschreitenden Klimawandel.
-
-
-Durch die voranschreitende technische Entwicklung in Industrie, Gewerbe und Landwirtschaft verändert und belastet der Mensch zunehmend die Umwelt.
-Umweltbelastungen können viele Ursachen haben, möglicherweise sind bessere Lösungen nicht umsetzbar oder wirtschaftlich nicht attraktiv.
-Die Umweltbelastung entsteht auf verschieden Ebenen, die sich in ihrer Gegebenheit unterscheiden.
-Es gibt energetischen Belastungen, wie Strahlen, Lärm und Erschütterungen.
-Es gibt Umweltbelastungen durch feste Stoffe wie Abfälle die durch Bau und Abbruch entstehen, Abfälle aus Produktionen und Abfälle aus der Gewinnung von Bodenschätzen.
-Auch flüssige Stoffe belasten die Umwelt. Sie entstehen durch Chemie Fabriken, Reste von Medikamenten die durch den Urin in das Abwasser gelangen oder durch Umweltkatastrophen bei der sich das Wasser mit andren Stoffen vermischt.
-Ein Beispiel hierfür könnte ein Erbebben sein, welches ein Atomkraftwerk beschädigt und radioaktives Wasser ausläuft.
-Die größte Umweltbelastung für die Umwelt ist aber die gasförmige Verschmutzung, welche die Luft verschmutzt.
-Die Gasformringe Verschmutzung welche die Luft verunreinigt ist die eine von den größten Belastungen für die Umwelt.
-Durch unsachgemäße Wiederverwertung können Luftverschmutzungen entstehen, wie zum Beispiel die Verbrennung von
-Stromkabeln um das Kupfer aus der Isolierung zu trennen.
-Die Luftverschmutzung ist ebenso verantwortlich für Krankheiten und vorzeitigen Tod von Menschen.
-Feinstaub kann in den Körper eindringen und schwerwiegende Krankheiten auslösen.
-Luftverschmutzung entsteht bei Tierhaltung sowie durch den Einsatz von Pestiziden.
-
-Die Hauptursache sind Abgase die bei der Verbrennung von fossilen Kraftstoffen entstehen.
-Ein großer Träger bei der Verbrennung von fossilen Kraftstoffen sind Kraftfahrzeuge.
+% Denn durch den Verkehr verursachten Schadstoffe sind eine wesentliche Ursache für den schnell voranschreitenden Klimawandel.
 
 
-Gemeint sind damit Fahrzeuge,
-die nicht nur automatisch fahren, sondern von einem System gesteuert und disponiert werden und
-damit aus Sicht der Nutzenden „autonom“ unterwegs sind. Die Erwartungen gehen weit auseinander: während die einen in der Verbreitung autonomer Fahrzeuge die Lösung aller Probleme sehen,
-prognostizieren die anderen eine Verschärfung der bereits angespannten Verkehrslage.
-Welche Bedeutung aber solche Fahrzeuge
-in Zukunft haben werden, hängt neben der Bewältigung der technischen Komplexität
-von der Art und Weise der politischen Regulierung ab. Ob solche Systeme überhaupt im öffentlichen
-Straßenraum erscheinen und welche Wirkungen sich für den zukünftigen Verkehr daraus ergeben,
-entscheidet maßgeblich der gesetzliche Rahmen.
-Dieser gesetzliche Rahmen ist wiederum abhängig
-vom Zielbild, wie wir künftig leben wollen und wie der Verkehr von morgen aussehen soll.
-Eckpfeiler dieses Zielbildes sind zum einen die Sicherheit und die Aufenthaltsqualität im öffentlichen Raum und
-zum anderen die drastische Reduktion schädlicher Emissionen sowie nicht zuletzt die Erreichung der
-Klimaschutzziele im Verkehr. Dafür bedarf es einer umfassenden Verkehrswende, die mehr ist als eine Antriebswende.
-Private Pkw werden in den nächsten Jahren serienmäßig mit weitgehenden Assistenzfunktionen angeboten, damit können sie eine zusätzliche Attraktivität erhalten und der Autoverkehr kann sogar
-noch weiter zunehmen. Eine fortschreitende Automatisierung privater Autos mit einem solchen Effekt wäre im Sinne der angestrebten Verkehrswende kontraproduktiv.
-Dieser Entwicklung ist vor allem mit einem Abbau der Privilegien für das private Auto, also in erster Linie mit einer konsequenten Internalisierung der externen Kosten zu begegnen.
-Auf der anderen Seite bieten (teil-) automatisierte Fahrzeuge, nicht zuletzt neue Fahrzeugformate zwischen Pkw und Bus, bereits jetzt neue
-Chancen für einen effizienten und attraktiven Öffentlichen Verkehr.
-Im ersten Schritt automatisierte Shuttles als ein neues Element eines künftigen Öffentlichen Verkehrs zu etablieren.
-Gleichzeitig sollte der neu zu schaffende Regulierungsrahmen die heute schon entstehenden on demand-Verkehre ermöglichen und den Weg dafür frei machen, deren optimale Verknüpfung
-mit dem klassischen ÖPNV zu erproben.
-Diese neuen Angebote operieren heute noch mit Fahrern.
-Sie sind aber als Vorläufer autonomer Fahrzeugflotten zu verstehen, die in Zukunft möglich werden.
-Mit diesen neuen Angebotsformen im Zusammenspiel mit dem klassischen Umweltverbund erscheint es perspektivisch möglich, in einem definierten Bediengebiet eine wirkliche Alternative zum
-privaten Pkw zu kreieren und damit die Zahl der Fahrzeuge, zumindest in der Stadt, insgesamt auf die
-vom Umweltbundesamt angestrebten 150 Kraftfahrzeuge je 1.000 Einwohner deutlich zu verringern.
-Voraussetzung ist, dass die Kapazitäten der öffentlichen Verkehrsangebote verdoppelt und mindestens ein Viertel davon im digitalen on demand-Modus bedient werden kann.
-Mit einem hochintegrierten intermodalen Öffentlichen Verkehr ist in weiterer Zukunft die Mobilität
-sogar mit noch viel weniger Fahrzeugen zu gewährleisten.
-Eine zukünftige Regulierungspraxis könnte
-durch einen Mix aus Groß- und Kleinfahrzeugen, aus spurgeführten und getakteten sowie flexiblen
-on demand-Verkehren die Zahl der Straßenfahrzeuge zur Abwicklung sämtlicher Personenkilometer
-in den Städten auf bis zu 50 Einheiten pro 1.000 Einwohner insgesamt reduzieren.
-Gegenüber konventionellen Bussystemen können automatisch fahrende Shuttles die Kosten des operativen Betriebes um rund die Hälfte senken.
-Im Ergebnis bedeutet dies, dass mit automatisierten Fahrzeugflotten
-der Verkehr in Zukunft verlässlicher, sozial ausgewogener, leistungsfähiger und vor allen Dingen mit
-einem geringeren Ressourceneinsatz gestaltet werden kann.
-Ein völlig neu aufgestellter und flexiblerer Öffentlicher Verkehr ist damit verbunden, dass sich die
-bisherigen Zuständigkeiten und Branchengrenzen verschieben und die Organisation des gesamten
-Verkehrs als eine öffentliche Regieaufgabe begriffen werden muss.
+% Durch die voranschreitende technische Entwicklung in Industrie, Gewerbe und Landwirtschaft verändert und belastet der Mensch zunehmend die Umwelt.
+% Umweltbelastungen können viele Ursachen haben, möglicherweise sind bessere Lösungen nicht umsetzbar oder wirtschaftlich nicht attraktiv.
+% Die Umweltbelastung entsteht auf verschieden Ebenen, die sich in ihrer Gegebenheit unterscheiden.
+% Es gibt energetischen Belastungen, wie Strahlen, Lärm und Erschütterungen.
+% Es gibt Umweltbelastungen durch feste Stoffe wie Abfälle die durch Bau und Abbruch entstehen, Abfälle aus Produktionen und Abfälle aus der Gewinnung von Bodenschätzen.
+% Auch flüssige Stoffe belasten die Umwelt. Sie entstehen durch Chemie Fabriken, Reste von Medikamenten die durch den Urin in das Abwasser gelangen oder durch Umweltkatastrophen bei der sich das Wasser mit andren Stoffen vermischt.
+% Ein Beispiel hierfür könnte ein Erbebben sein, welches ein Atomkraftwerk beschädigt und radioaktives Wasser ausläuft.
+% Die größte Umweltbelastung für die Umwelt ist aber die gasförmige Verschmutzung, welche die Luft verschmutzt.
+% Die Gasformringe Verschmutzung welche die Luft verunreinigt ist die eine von den größten Belastungen für die Umwelt.
+% Durch unsachgemäße Wiederverwertung können Luftverschmutzungen entstehen, wie zum Beispiel die Verbrennung von
+% Stromkabeln um das Kupfer aus der Isolierung zu trennen.
+% Die Luftverschmutzung ist ebenso verantwortlich für Krankheiten und vorzeitigen Tod von Menschen.
+% Feinstaub kann in den Körper eindringen und schwerwiegende Krankheiten auslösen.
+% Luftverschmutzung entsteht bei Tierhaltung sowie durch den Einsatz von Pestiziden.
 
-es offensichtlich, dass für einen nachhaltigen Verkehr weder die bisherige Aufteilung des öffentlichen Raumes noch die Organisation und Finanzierung des Verkehrs, insbesondere
-des Öffentlichen Verkehrs, beibehalten werden kann. Die bisherige Dominanz privater Fahrzeuge im
-öffentlichen Raum gerade in der Stadt wird bei der Einführung automatisierter Systeme erodieren.
-Der private motorisierte Individualverkehr wird durch neue gemeinschaftliche Mobilitätsformen
-(„Sharing“) schrittweise zurückgefahren.
-Kerngedanke einer Verkehrswende ist, dass sich der individualisierte Verkehrswunsch vom Eigentum an einem Fahrzeug löst und durch die Nutzung eines vielfältigen Fahrzeugparks ersetzt wird.
-Voraussetzung dafür ist allerdings, dass die on demandAngebote verkehrs- und innovationspolitisch unterstützt werden.
-Dazu gehört, dass die bereits heute möglichen, digital basierten Services zugelassen und als Teil des neuen öffentlichen Verkehrsangebotes verstanden werden.
-Der Wettlauf um die Automatisierung im Verkehr hat längst begonnen. Die Ausgangslage verschiedener Akteure für den Start in die Zukunft der Mobilität sind aber sehr unterschiedlich: Während
-digitale Plattformbetreiber wie Uber und Waymo offensiv Milliarden in die Technologieentwicklung
-investieren, befinden sich die klassischen Automobilhersteller noch mitten im konventionellen Geschäftsmodell. Es ist davon auszugehen, dass die Automobilunternehmen mit einer Steigerung des
-Automatisierungsgrades primär die Attraktivität des privaten Fahrzeuges zurückgewinnen möchten.
-Damit könnten sich die Zahl der Fahrzeuge und ihre Fahrleistung noch weiter erhöhen. Die Entwickler
-(teil-) automatisierter Shuttles bleiben in ihren technologischen Potenzialen hinter diesen Entwicklungen weit hinterher.
-Die Betreiber öffentlicher Verkehrssysteme wiederum spielen in diesem Technologiewettbewerb
-bislang überhaupt keine Rolle, sie müssen für diesen Wettbewerb erst noch ertüchtigt werden. Dafür
-brauchen sie nicht zuletzt verlässliche rechtliche Rahmenbedingungen.
+% Die Hauptursache sind Abgase die bei der Verbrennung von fossilen Kraftstoffen entstehen.
+% Ein großer Träger bei der Verbrennung von fossilen Kraftstoffen sind Kraftfahrzeuge.
+
+
+
+\section{autonome Fahrzeuge}
+Sind Fahrzeuge die nicht nur automatisch fahren sondern von einem System gesteuert werden.
+Somit sind diese Fahrzeuge aus Sicht der Nutzenden autonom.
+
+Während manche in der Verbreitung autonomer Fahrzeuge die Lösung vieler Probleme sehen können,
+vermuten andere eine Verschlechterung der Verkehrs- und Umweltlage.
+
+Die Bedeutung von autonomen Fahrzeugen, hängt sowohl von der technischen Komplexität sowie von politischen Regulierung ab.
+
+In welchem Maß die Level 5 Systeme im Straßenverkehr teilnehmen entscheidet vorerst der gesetzliche Rahmen.
+Dies ist wiederum abhängig wie der Verkehr von morgen aussehen soll.
+\subsection{Gesetzliche Regelungen}
+Was ist bereits wo erlaubt?
+Welche Länder haben was freigegeben?
+
+
+Hauptsächlich wird Sicherheit und die Senkung schädlicher Emissionen sowie das Erreichen der
+Klimaschutzziele im Verkehr die größte Rolle spielen.
+\subsection{Klimaschutzziele}
+Wer bestimmt Klimaschutzziele?
+Welche Klimaschutzziele gibt es?
+Welche Klimaschutzziele sollen erreicht werden?
+
+
+
+\newpage
+
+\chapter{Umwelt- und Klimaeffekte}
+Die Umwelt- und Klimaeffekte durch autonomes Fahren ist durch die Vielzahl der Verknüpfungen mit anderen Technologien wie Elektromobilität
+oder Dienstleistungen von Fahrdiensten und Car-Sharing-Angeboten im direkten Vergleich kaum noch bestimmbar.
+
+Grundsätzlich werden Klimaeffekte abhängig von:
+\begin{itemize}
+	\item den eingesetzten Technologien
+	\item den Kosten künftiger Mobilitätsdienstleister
+	\item gesetzlichen Bestimmungen
+	\item der Nachfrage von Nutzern
+\end{itemize}
+
+Im direkten Vergleich von autonomen Fahrzeugen zu konventionellen Fahrzeugen fällt besonders der Kraftstoffverbrauch auf,
+aber auch andere Faktoren können die Umwelt weniger Belasten wie die generelle Reduktion von Fahrzeugen.
+
+\section{Kraftstoffeinsparungen}
+Kraftstoffeinsparungen durch autonomes Fahren im Straßenverkehr können sich durch
+eine Steigerung der Effizienz im Verkehrsfluss und
+einer abgestimmten Fahrweise bei einer optimalen Routenführung ergeben.
+
+Erste Wirkungen können sich bereits im Mischverkehr aus autonom und konventionell gesteuerten Kraftfahrzeugen bemerkbar machen durch weniger
+Brems- und Beschleunigungsvorgängen.
+
+Die Wirkungen könnten sich mit einer steigenden Marktdurchdringung von autonomen Fahrzeugen
+durch sinkenden stockenden Verkehr sowie eine Reduzierung von Staus bemerkbar machen.
+
+\subsection{Kraftstoffeinsparungen auf Autobahnen}
+Erste Abschätzungen zu Kraftstoff\-einsparungen im Individualverkehr auf Autobahnen in\\
+Deutschland wurde vom Fraunhofer
+Institut für Arbeitswirtschaft und Organisation (IAO) vorgenommen.
+
+Dort wurde die Wirkung von drei bereits existierenden Assistenzsystemen (Stau-Chauffeur, Spurwechsel-Chauffeur, Autobahn-Chauffeur)
+der Automatisierungsstufe 3 auf Autobahnen begutachtet.
+
+Die Wirkung wurde für zwei verschiedene Szenarien ausgewiesen.
+Das erste Szenario basiert darauf dass alle Kraftfahrzeuge autonom fahren.
+Im zweiten Szenario betrug der Anteil ungefähr 45.000 autonome Fahrzeuge.
+
+Auf der Basis von einer 10-20 prozentigen Reduzierung des Kraftstoffverbrauchs ergab sich
+im ersten Szenario ein jährliches Sparpotential zwischen 360 und 720 Millionen Euro und
+im zweiten Szenario von 0,4 bis 0,8 Millionen Euro.
+
+Rechnet man diese Werte auf einzelne autonome Kraftfahrzeuge um,
+ergäbe dies eine Einsparung für jedes autonome Kraftfahrzeug von 8 bis 16 € pro Jahr.
+\footnote{Fraunhofer-Institut für Arbeitswirtschaft und Organisation IAO, Hochautomatisiertes
+	Fahren auf Autobahnen – Industriepolitische Schlussfolgerungen, Studie im Auftrag des
+	Bundesministeriums für Wirtschaft und Energie, November 2015, S. 264ff.}
+
+Eine weitere Einsparung auf Autobahnen durch autonome Fahrzeuge könnte mit
+dem systembedingten verzicht der Überschreitung von Fahrgeschwindigkeiten über der Richtgeschwindigkeit.
+Der Verzicht von höheren Geschwindigkeiten auf Autobahnen kann zu enormen Einsparungen im Kraftstoffverbrauch führen,
+da mit steigender Geschwindigkeit der Kraftstoffverbrauch überproportional rasant ansteigt.
+
+\subsection{Kraftstoffeinsparungen im Individualverkehr im städtischen Verkehr}
+Zu den Kraftstoffeinsparungen auf Autobahnen werden von
+autonomen Kraftfahrzeugen besonders im städtischen Verkehr
+eine deutliche Reduzierung im Verbrauch von Kraftstoffen erwartet.
+
+Große Einsparpotentiale bieten hierfür:
+\begin{itemize}
+	\item die Steigerung des Verkehrsflusses insbesondere an Knotenpunkten
+	\item Verstetigung der Geschwindigkeit
+	\item die Vermeidung von Verkehrsstörungen
+\end{itemize}
+
+Wie die Auswertung internationaler Studien
+\footnote{Milakis, D., van Arem, B., van Wee, B., Policy and society related implications of
+	automated driving: A review of literature and directions for future research, Journal of
+	Intelligent Transportation Systems, 2017, Vol. 21, No. 4, 335f} gezeigt hatsss,
+können Einsparungen beim Kraftstoffverbrauch von
+bis zu 31 Prozent im städtischen Bereich sowie
+bis zu 45 Prozent bei einer optimierten Knotenpunktsteuerung erreicht werden.
+Diese Abschätzungen basieren auf Simulations- und Modellrechnungen.
+Die Menge der  Kraftstoffeinsparungen hängt unter anderem von mehreren Faktoren ab:
+\begin{itemize}
+	\item die verwendete Automatisierungsstufe
+	\item der Marktanteil von autonomen Fahrzeugen
+	\item die Vernetzung zwischen den Fahrzeugen
+	\item die Vernetzung zwischen den Fahrzeugen und der Infrastruktur
+\end{itemize}
+
+\subsection{Kraftstoffeinsparungen bei Flottenfahrzeugen}
+Bei Flottenfahrzeugen wäre eine intensivere Nutzung der autonomen Fahrzeuge zu erwarten, wodurch sich der Nutzungszeitraum verkürzt.
+Dadurch werden Flottenfahrzeuge früher ausrangiert.
+Durch das schnelleren wechsel der Flottenfahrzeuge werden Fahrzeuge mit technologischen Erneuerung
+die weniger Luftschadstoffe und Emissionen produzieren schneller eingesetzt.
+Dies könnte im städtischen Bereich zu einer Reduktion von Verkehrsbedingen Luftschadstoffen und Emissionen führen.
+
+\subsection{Positive Umwelteinwirkung durch die Reduktion von Fahrzeugen}
+Positive Umwelteinwirkung durch autonomes Fahren kann durch eine
+Reduktion an Fahrzeugen erwartet werden.
+
+Mobilitatsdienleiter mit autonomen Taxen können
+Kunden abholen und zu Zielort bringen,
+und vermindern die Notwendigkeit zum Kauf eines Fahrzeugs,
+das im Schnitt 95 Prozent der Zeit ungenutzt parkt.85
+
+Dabei verwischen die traditionellen Grenzen zwischen den
+Verkehrssystemen, weil das autonome Fahrzeug im Prinzip alles sein kann: privates Auto, Taxi, Bus, Car-Sharing-Fahrzeug oder Sammeltaxi.
+Verschiedene Studien versuchen in Szenarien zu berechnen, wie viele private
+Pkw sich durch Robo-Taxen bzw. Robo-Busse ersetzen ließen. So kommt eine Studie für die Stadt München zum Ergebnis, dass eine autonome Stadtflotte von 18.000
+Fahrzeugen den gesamten Individualverkehr innerhalb des festgelegten Servicegebiets sowie 20 Prozent des Pendlerverkehrs abdecken könnte. Damit wären
+theoretisch bei einer zeitlichen Auslastung der Robo-Flotte von über 50 Prozent
+ca. 200.000 der 700.000 in München gemeldeten Fahrzeuge zu ersetzen.86
+Zu ähnlichen Ergebnissen kommen auch andere Studien: Im Falle gemeinschaftlich genutzter autonomer Fahrdienste wären danach nur 10 bis 30 Prozent
+des heutigen Fahrzeugbestandes notwendig, ohne dass es Einschränkungen in der
+Mobilität gäbe.87
+Für die EU und USA erwarten aktuelle Untersuchungen bereits
+zwischen 2020 und 2030 einen Rückgang des Fahrzeugbestandes um 25 Prozent,
+vor allem ausgelöst durch eine intensive Nutzung von autonomen Fahrdiensten
+(inkl. Ride-Sharing).88
+Gleichwohl bliebe auch danach privater Pkw-Besitz von
+dann häufig auch autonomen Fahrzeugen noch wichtig.
+Bis 2040 könnten anderen Szenarien zufolge bereits 50 Prozent der Autos autonom fahren, der Besitz an privaten PKW um 50 Prozent sinken, da jedes gemeinsam genutzte fahrerlose Auto
+nicht weniger als sieben traditionelle Autos ersetzen könnte.89
+Gleichzeitig würde durch Robo-Taxis auch der Parksuchverkehr entfallen, der ja in den Innenstädten
+Städtische Mobilitätsangebote von autonomen Fahrdiensten (Roboter-Taxiflotten),
+die die Kunden abholen und zum gewünschten Zielort bringen, vermindern die
+Notwendigkeit zum Kauf eines privaten Fahrzeugs, das im Schnitt 95 Prozent der
+Zeit ungenutzt parkt.85
+Dabei verwischen die traditionellen Grenzen zwischen den
+Verkehrssystemen, weil das autonome Fahrzeug im Prinzip alles sein kann: privates Auto, Taxi, Bus, Car-Sharing-Fahrzeug oder Sammeltaxi.
+Verschiedene Studien versuchen in Szenarien zu berechnen, wie viele private
+Pkw sich durch Robo-Taxen bzw. Robo-Busse ersetzen ließen. So kommt eine Studie für die Stadt München zum Ergebnis, dass eine autonome Stadtflotte von 18.000
+Fahrzeugen den gesamten Individualverkehr innerhalb des festgelegten Servicegebiets sowie 20 Prozent des Pendlerverkehrs abdecken könnte. Damit wären
+theoretisch bei einer zeitlichen Auslastung der Robo-Flotte von über 50 Prozent
+ca. 200.000 der 700.000 in München gemeldeten Fahrzeuge zu ersetzen.86
+Zu ähnlichen Ergebnissen kommen auch andere Studien: Im Falle gemeinschaftlich genutzter autonomer Fahrdienste wären danach nur 10 bis 30 Prozent
+des heutigen Fahrzeugbestandes notwendig, ohne dass es Einschränkungen in der
+Mobilität gäbe.87 Für die EU und USA erwarten aktuelle Untersuchungen bereits
+zwischen 2020 und 2030 einen Rückgang des Fahrzeugbestandes um 25 Prozent,
+vor allem ausgelöst durch eine intensive Nutzung von autonomen Fahrdiensten
+(inkl. Ride-Sharing).88 Gleichwohl bliebe auch danach privater Pkw-Besitz von
+dann häufig auch autonomen Fahrzeugen noch wichtig. Bis 2040 könnten anderen
+Szenarien zufolge bereits 50 Prozent der Autos autonom fahren, der Besitz an privaten PKW um 50 Prozent sinken, da jedes gemeinsam genutzte fahrerlose Auto
+nicht weniger als sieben traditionelle Autos ersetzen könnte.89 Gleichzeitig würde
+durch Robo-Taxis auch der Parksuchverkehr entfallen, der ja in den Innenstädten
+Erstens können neue Fahrten, z.B. zu Freizeitzwecken, und damit Mehrverkehr
+ausgelöst werden, wenn die Mobilitätskosten sinken und das Fahren dadurch
+attraktiver wird.
+Zweitens ist eine Verkehrsverlagerung von Fahrten hin zu Robo-Taxis denkbar,
+die vorher mit dem öffentlichen Verkehr bzw. mit dem Fahrrad zurückgelegt
+wurden. So könnten autonome Fahrangebote wegen des besseren, weil komfortableren Service präferiert werden. Dies könnte zu höheren Pkw-Fahrleistungen führen.92
+Drittens können sich längerfristig auch raumintensivere Siedlungsstrukturen und damit weitere Wege zu den Aktivitätsorten (Wohnen, Arbeit, Freizeit) entwickeln. So erleichtern autonome Fahrzeuge längere Pendelwege, da
+die Mobilitätszeit durch den Wegfall der Fahraufgabe anders oder effizienter,
+z.B. zum Arbeiten oder zum Schlafen, genutzt werden kann. Dadurch können
+Wohnorte in stadtfernen Regionen künftig weit attraktiver werden, zumal nicht
+mit sinkenden Mietpreisen in Metropolen zu rechnen ist.
+Viertens können autonome Fahrzeuge auch privat bzw. als Firmenfahrzeuge gekauft und verwendet werden.93 Vorstellbar sind kundenindividuelle
+Robo-Shuttles oder etwa «autonom fahrende Arbeits- und Schlafplätze», die
+etwa von Außendienstmitarbeitern genutzt werden. Dadurch könnten die
+Zahl der Fahrzeuge sowie die Verkehrsleistungen steigen und weitere negative
+Umwelteffekte entstehen (z.B. «Autonome Schlafwagenflotten», die Hotelübernachtungen einsparen).
+Insgesamt wird deutlich, dass bei autonomen Fahrzeugen bzw. Fahrdiensten
+sowohl positive als auch negative Klima- bzw. Umwelteffekte möglich wären. Hier
+braucht es noch weitergehende Untersuchungen, um durch wirksame regulative
+Rahmenbedingungen ggf. unerwünschte Umweltfolgen zu verhindern
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\section{LKW}
+In den Marktstudien wird darauf verwiesen, dass sich die Wirkungen vor
+allem aus Einsparungen bei den Personalkosten und bei den Kraftstoffkosten
+zusammensetzen. PwC sieht durch Platooning ein Einspareffekt bei den
+Kraftstoffkosten von rund 7Prozent. Roland Berger beziffert den Einspareffekt in
+Höhe von 8 Prozent für das führende Fahrzeug und in Höhe von 14Prozent für die
+folgenden Fahrzeuge bei einer Geschwindigkeit von 85 km/h.16 Das
+International Transport Forum beziffert die Kraftstoffkosteneinsparungen
+(infolge verbesserten Brems- und Beschleunigungsverhaltens) bei
+automatisiertem „eco-driving“ (keine Platoons) in Höhe von 4-10Prozent, bei
+teilweise manuell gesteuerten Platoons in Höhe von 6-10Prozent und bei
+vollautomatisierten Platoons bei über 10Prozent
+
+
+
+Klima-/Umwelteffekte
+
+
+
+\section{Infrastrukturen für Autonomes Fahren}
+Die Entwicklung der Zukunftstechnologien und des Markthochlaufs von autonomen Fahrzeugen (Level 4, 5) erfordert neben der Weiterentwicklung von Fahrzeugtechnologien für Autonomes Fahren (Level 5) auch materielle (5G, Datenstandards,)
+immaterielle (z.B. Software/AI-Kompetenzen) und institutionelle Infrastrukturen
+(rechtlich-regulativer Rahmen) als Erfolgsvoraussetzungen
+\subsection{Materielle Infrastrukturen: Datenübertragung (5G), Datenstandards}
+Als wesentliche technische Voraussetzungen für autonomes Fahren gelten Sensortechnologien, Software-Algorithmen und hochauflösende Karten. Für letzteres
+haben die deutschen Hersteller durch den Kauf des Kartenanbieters Here bereits
+die Voraussetzungen geschaffen. Gleichzeitig ist jedoch auch die Datenkommunikation zwischen Fahrzeug und Straßeninfrastruktur (Vehicle-to-Infrastructure) sowie der Fahrzeuge untereinander (Vehicle-to-Vehicle) und zu großen Rechenzentren (z.B. der Hersteller) fundamental. Das autonom fahrende Auto muss zu anderen
+Fahrzeugen eine Verbindung herstellen und ihnen Dinge mitteilen können, die es
+selbst gelernt hat.102 Reaktionsschnelle Mobilfunknetze (5G) sowie Datenstandards
+für einen breitbandigen und sicheren Datenaustausch sind hierfür essentiell.103
+So produzieren autonome Fahrzeuge exponentiell ansteigende Mengen an Daten
+durch ihre Sensorik wie Laser- (Lidar), Radarsensoren und Kameras, die sich auf
+4.000 Gigabyte täglich summieren können. In cloudbasierten Datenpools werden
+diese Datenströme der autonom fahrenden Autos in Echtzeit in Datensätze verwandelt und an das Auto zurückübermittelt, damit es seine gesamte Umgebung
+erkennt. Dabei spielen Anwendungen der Künstlichen Intelligenz (KI) und des
+maschinellen Lernens eine entscheidende Rolle.104
+Gleichzeitig stellen 5G-Funkkomponenten für autonome Fahrzeuge eine
+zusätzliche Schutzebene bereit, indem diese mit Fahrzeugen im näheren Umfeld
+und der Infrastruktur am Straßenrand zuverlässig und schnell kommunizieren,
+z.B. wenn die Sensoren keine Sichtverbindung haben oder nachteilige Wetterbedingungen herrschen.105 Darüber hinaus könnten 5G-Netze mit geringen Latenzzeiten auch die Fernsteuerung autonomer Fahrzeuge ermöglichen. Flottenbetreiber
+von autonomen Fahrdiensten könnten dann in Fällen, in denen das Fahrzeug überfordert ist, mittels Fernsteuerung eingreifen. Allerdings dürften künftig sicherheitskritische Funktionen von autonomen Fahrzeugen nicht auf Mobilfunkverbindungen angewiesen sein. So gibt etwa die Google-Tochter Waymo an, dass ihre
+Fahrzeuge auch ohne eine ständige Verbindung sicher funktionieren würden.
+Prinzipiell sieht auch das Bundesverkehrsministerium 5G in der Mobilität als
+zwingende Infrastrukturvoraussetzung,106 wobei das geplante 5G-Netz für zahlreiche Zukunftstechnologien ein Engpassfaktor darstellt, darunter das Internet
+of Things (IoT).107 Heutige Festnetz-, Mobilfunk- und Satellitennetze sind nicht
+für Datenaufkommen, Reaktionsgeschwindigkeiten und die Versorgungssicherheit des Autonomen Fahrens ausgelegt. Automobilhersteller wie VW, Daimler und
+BMW haben sich bereits 2016 in der 5G Automotive Association (5GAA) zusammengeschlossen, um die notwendige Standardisierung für vernetzte und autonome
+Fahrzeuge voranzutreiben. Allerdings gibt es selbst zwischen den in der 5GAA versammelten Herstellern noch Wettstreite um technische Konzepte und Kommunikationsstandards.108 Prognosen gehen daher davon aus, dass die Hochlaufphase für
+5G sich erst ab 2023 stark intensiviert und dann bis 2028 auch alle regulatorischen
+Fragen abgeschlossen sein werden.109
+Insgesamt sind 5G-Netze für Autonomes Fahren und das vernetzte Fahrzeug
+von großer Bedeutung, da dadurch erst sichere kommerzielle Anwendungen von
+vernetzten und autonomen Fahrzeugen möglich sind. Entsprechend muss deren
+Aufbau beschleunigt und weiter intensiviert werden. Die Investitionen in den
+5G-Aufbau werden in einer 2016 veröffentlichten Studie für die EU-Kommission
+bis 2025 auf rund 56 Mrd. Euro veranschlagt. Dieselbe Studie prognostiziert
+im Gegenzug bis zu 113 Mrd. Euro zusätzliche Umsätze durch 5G in vier Sektoren, darunter auch Automotive, sowie die Schaffung von 2,3 Mio. Arbeitsplätzen
+europaweit.11
+
+
+
+\chapter{Mobilitätsdienstleistungen und deren besondere Infrastrukturvoraussetzunge}
+\section{Konzept, Klima-/Umweltrelevanz, Markttrends}
+Mobilitätsdienstleistungen sind ein zentrales Zukunftsfeld für Automobilhersteller,
+Digitalplayer wie Google, Start-ups wie Uber sowie von Städten und Kommunen
+gleichermaßen. Die Vision eines «Mobility as a Service» (MaaS) beschreibt die Vision
+einer bruchlosen, hoch vernetzten Reise- bzw. Mobilitätskette über verschiedene
+Verkehrsträger hinweg: von der intermodalen Routenplanung über die Buchung on
+Demand und der Bezahlung bis hin zur Abwicklung der Fahrten.123 Darüber hinaus
+können noch weitere Services wie Parkplatzdienste, Charging-Dienste oder Entertainment-Dienste hinzugezählt werden (vgl. für eine Übersicht Abb. 7).
+Aus Kundensicht erweitern sich durch die neuen Mobilitätsangebote wie
+Car-Sharing, Bike- und Ride-Sharing die Mobilitätsangebotsoptionen. War bis vor
+kurzem ein eher monomodales Verkehrsverhalten dominant, das alle Fahrten entweder mit dem privaten Auto oder mit dem ÖPNV vorsah, entwickelt sich mittels
+internetfähiger Smartphones ein intermodales oder gar multimodales Mobilitätsmuster: D.h. Kunden können ihren Mobilitätsbedarf individuell und schnell per
+Fingertipp mit einer breiten Vielfalt von Mobilitätsangeboten befriedigen und dabei
+nach ihren Präferenzen die günstigste, schnellste oder komfortabelste Kombination von Verkehrsmitteln auswählen. Durch multimodale Apps wie Moovel, Qixxit,
+Ubigo oder Whim kann die Reisekette mit dem Smartphone künftig in Echtzeit
+einfach und sicher geplant, gebucht und teilweise bereits bezahlt werden. Das
+Fernziel ist Interoperabilität, also die bruchlose Übersicht, Verfügbarkeit und Buchbarkeit als kundenindividuell optimierter Mix aus allen Mobilitätsangeboten –
+ÖPNV, Taxi, Car-Sharing, Ride-Hailing und Ride-Sharing, Leihwagen oder BikeSharing etc. – für die urbane Mobilität.124
+Mobilitätsdienstleistungen bzw. MaaS begründen gleichzeitig neue Geschäftsmodelle auf Basis der Mobilitätseffizienz-, der Mobilitätszeit- und der Mobilitätssystem-Revolution. Für Automobilhersteller ergibt sich durch Mobilitätsdienstleistungen in Kombination mit dem Autonomen Fahren die Chance von neue
+Geschäftsfeldern als Ersatz für die sich perspektivisch auflösenden bisherigen
+kommerziellen Pfeiler, die wesentlich auf den Autokauf bzw. Autobesitz und
+Freude am manuellen Autofahren angelegt waren.125 Gleichsam erweitert sich
+jedoch auch das Wettbewerbsumfeld durch Digitalplayer wie Apple, Google
+oder Alibaba und Baidu, die ihre Ökosysteme aus Kommunikations- und Entertainment-Services um Mobilitätsdienste erweitern wollen. Außerdem drängen
+Start-ups wie Uber, Lyft, BlablaCar und andere mit innovativen Services einer
+digitalen Mobility-on-Demand auf den Plan.
+Hinzu kommt, dass künftig mit den oben skizzierten Trends von Elektromobilität und autonomen Fahrzeugen bzw. Robo-Taxis weitere innovative und kostengünstige Mobilitätsangebote marktreif sein werden. Diese werden nicht nur
+das Spektrum von Mobilitätsdienstleistungen erweitern. Sie führen auch zu einem
+Verschmelzen von öffentlichem und privatem Verkehr, weil das autonome Fahrzeug prinzipiell sowohl privat genutzt als auch als Taxi, Car-Sharing-Fahrzeug
+oder Rufbus eingesetzt werden kann.126 Dabei stellt sich auch die Frage, ob durch
+die sich entwickelnden autonomen Fahrdienste der ÖPNV kannibalisiert wird
+oder ob diese einen positiven Beitrag zur Minderung des Autoverkehrs bzw. der
+Klimabelastung des Verkehrs leisten können.
+
+\subsection{Umwelt-/Klimarelevanz}
+Die lokale bzw. regionale Ebene wird eine wichtige Rolle bei der Ausgestaltung
+der Mobilitätsdienstleistungen der Zukunft spielen und damit auch bei der Frage,
+ob die neuen Angebote einen positiven Beitrag für den Klimaschutz im Verkehrsbereich erbringen können.127 Städte und Kommunen sind nicht nur mit
+der Verkehrsplanung, den baulichen Infrastrukturen von Straßen und Parkplätzen und dem Betrieb des öffentlichen Personennahverkehrs betraut. Sie können
+auch über die Ausgestaltung von integrierten Mobilitätsdienstleistungen mitentscheiden. Dabei ist der verkehrsplanerische Handlungsdruck in urbanen Gebieten
+aufgrund zunehmender Flächenknappheit bei einem gleichzeitig wachsenden
+Verkehr und Mobilitätsbedürfnis der Menschen hoch.
+Eine zentrale Bedeutung kommt den Robo-Taxis bzw. autonomen Fahrangeboten zu, bei denen noch nicht klar ist, ob sie in der Gesamtbilanz positive
+oder negative Umwelt- und Klimaeffekte haben werden (vgl. Kapitel 4). So werden zu Beginn der 2020er Jahre erste autonom fahrende Shuttles auf deutschen Straßen unterwegs sein und sich wahrscheinlich dynamisch entwickeln.
+Studien rechnen bis zum Jahr 2030 damit, dass bereits 37 Prozent des PKWVerkehrsaufkommens autonom bzw. in geteilten Systemen (Car Pooling, RideSharing) absolviert werden könnten.128 Es ist damit zu rechnen, dass die
+Automatisierung des Fahrens erhebliche Auswirkungen auf das Preisgefüge und
+damit die Nutzung der Mobilitätsservices besitzen wird.129 Robo-Taxen könnten
+Berechnungen zufolge bis zu 60 Prozent günstiger betrieben werden als konventionelle.130 In den Möglichkeiten der Kombination von autonomen Taxen und
+Sharing-Konzepten liegt dabei enormes Potenzial für die Reduzierung des Fahrtaufkommens. Unter heute geltenden Regulierungsvorschriften (u.a. Personenbeförderungsgesetz, gesetzliche Regelungen für autonomes Fahren) ist allerdings
+unklar, ob und wie dieses Potenzial gehoben werden kann.131 Es wird hierbei
+wesentlich auch auf eine umweltgerechte Flankierung und Ausrichtung der politischen Regulation bzw. Anreizstrukturen ankommen, insbesondere auch auf
+Ebene der Kommunen. Dabei müssen autonome Fahrangebote in ein multimodales Verkehrssystem integriert werden.
